[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "corona-travel_server"
version = "0.1.0"
description = ""
readme="README.md"
repository=""
authors = [
    "Danil Kireev <dakireev@edu.hse.ru>",
]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.910"

[tool.poetry.scripts]
cts-mypy = "corona_travel_server.poetry_scripts:mypy"
