[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "corona_travel_server"
version = "0.1.0"
description = ""
readme="README.md"
repository=""
authors = [
    "Danil Kireev <dakireev@edu.hse.ru>",
]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
# uvicorn = {extras = ["standard"], version = "^0.15.0"} # add back when wheels are available on windows
uvicorn = "^0.15.0"
pydantic = "^1.8.2"
pymongo = "^3.12.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.910"
black = "^21.9b0"
pymongo = "^3.12.1"

[tool.poetry.scripts]
cts-mypy = "corona_travel_server.poetry_scripts:mypy"
cts-black = "corona_travel_server.poetry_scripts:black"
cts-dev = "corona_travel_server.poetry_scripts:dev"
cts-run = "corona_travel_server.poetry_scripts:run"